<resources>
    <string name="app_name">LeoApplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="large_text">large text</string>
    <string name="collect">collect</string>
    <string name="depozit_hesab_aç">Depozit hesabı aç</string>
    <string name="x_zin_yarat">Xəzinə yarat</string>
    <string name="sas">Əsas</string>
    <string name="kart_n_z_n_statusunu_t_kmill_dirin">Kartınızın statusunu təkmilləşdirin</string>
    <string name="f_rdi_sahibkar_hesab_v_kredit">Fərdi sahibkar hesabı və kredit</string>
    <string name="cashback">Cashback</string>
    <string name="y_m">Yığım</string>
    <string name="filiallar_atm">Filiallar ATM</string>
    <string name="leobank_nstagramda">Leobank İnstagramda</string>
    <string name="d_st_k_24_7">Dəstək 24/7</string>
    <string name="tarifl_r">Tariflər</string>
    <string name="tez_tez_veril_n_suallar">Tez-tez verilən suallar</string>
    <string name="ipucular">Ipucular</string>
    <string name="valyuta_m_z_nn_si">Valyuta məzənnəsi</string>
    <string name="profil_v_ayarlar">Profil və ayarlar</string>
    <string name="https_leobank_az_r_gggp">https://leobank.az/r/gGGp</string>
    <string name="dostunuzu_d_v_t_edin_v_h_r_biriniz_3_qazanin">Dostunuzu dəvət edin və hər biriniz 3₼ qazanin</string>
    <string name="x_rcl_m_statistikas">Xərcləmə statistikası</string>
    <string name="h_r_y_3">Hərəyə 3₼</string>
    <string name="d_v_t_etm_k">Dəvət etmək</string>
    <string name="_0_00">0.00₼</string>
    <string name="_50_000_d_k">50 000 ₼-dək</string>
    <string name="kreditl_r">Kreditlər</string>
    <string name="_0_001">0.00₼</string>
    <string name="mobil_n_mr_nizi_daxil_edin">Mobil nömrənizi daxil edin</string>
    <string name="_994">+994</string>
    <string name="r_li_d_ym_sini_s_xmaqla_siz">İrəli düyməsini sıxmaqla siz</string>
    <string name="rtl_r_v_tarifl_ri_q_bul_edirsiniz">şərtlər və tarifləri qəbul edirsiniz</string>
    <string name="r_li">İrəli</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="delete">⌫</string>
    <string name="d_st_k">Dəstək</string>
    <string name="az_rbaycan_dili">Azərbaycan dili</string>
    <string name="rus_dili">Rus dili</string>
    <string name="dil">Dil</string>
    <string name="az_rbaycan">Azərbaycan</string>
    <string name="rus">Русский</string>
    <string name="kod">Kod</string>
    <string name="_994_555_555_555">+994 (555) 555-555</string>
    <string name="n_mr_sin_g_nd_rildi">nömrəsinə göndərildi</string>
    <string name="code">Kod</string>
    <string name="_0_0">0.0</string>
    <string name="man_t_m_bl_i">Əmanət məbləği</string>
    <string name="g_zl_m_d_0_00">Gözləmədə $0.00</string>
    <string name="q_bzi_lav_et">Qəbzi əlavə et</string>
    <string name="pulu_k_r">Pulu köçür</string>
    <string name="karta_k_rm">Karta köçürmə</string>
    <string name="_0_0_">0.0</string>
    <string name="man">₼</string>
    <string name="balans_n_art_r_lmas">Balansın artırılması</string>
    <string name="karta_k_rmm">Karta köçürmə</string>
    <string name="dig_r_d_ni_l_r">Digər ödənişlər</string>
    <string name="kart_n_balans_n_n_art_r_lmas">Kartın balansının artırılması</string>
    <string name="dollar">$0.00</string>
    <string name="yat_r_m_edilib_0_00">Yatırım edilib $0.00</string>
    <string name="qazan_l_b_0_00">Qazanılıb $0.00</string>
    <string name="i">Kartın balansının artırılması</string>
    <string name="_24_7">DƏSTƏK 24/7</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="telegram">Telegram</string>
    <string name="facebook">Facebook</string>
    <string name="viber">Viber</string>
    <string name="dill">Dil</string>
    <string name="_az_dili">Azərbaycan Dili</string>
    <string name="bank_haqq_nda">Bank haqqında</string>
    <string name="leobank_az_rbaycan_n_ilk_r_q_msal_bank_d_r_biz_b_t_n_bank_prosedurlar_n_sad_l_dirib_lveri_li_bir_t_tbiqi_v_s_rf_li_kredit_kart_n_yaratd_q">Leobank - Azərbaycanın ilk rəqəmsal bankıdır. Biz bütün bank prosedurlarını sadələşdirib, əlverişli bir tətbiqi və sərfəli kredit kartını yaratdıq</string>
    <string name="rtl_r_v_xidm_t_qaydalar">Şərtlər və xidmət qaydaları</string>
    <string name="kredit_b_rosuna_edil_n_sor_uya_raz_l_q">Kredit bürosuna edilən sorğuya razılıq</string>
    <string name="asan_finans_raz_l_q_riz_si">ASAN Finans razılıq ərizəsi</string>
    <string name="tarifl_rr">Tariflər</string>
    <string name="gizlilik_siyas_ti">Gizlilik siyasəti</string>
    <string name="plastik_kart_blokla">Plastik kartı blokla</string>
    <string name="st_diyiniz_vaxt_onu_blokdan_xara_bil_rsiniz">İstədiyiniz vaxt onu blokdan çıxara bilərsiniz</string>
    <string name="pin_kod_d_yi_m_k">PIN-kod dəyişmək</string>
    <string name="kart_v_t_tbiql_r">kart və tətbiqlər</string>
    <string name="pay">Pay</string>
    <string name="komissiyas_z">Komissiyasız</string>
    <string name="mann">0 ₼</string>
    <string name="leobank_bu_k_rm_n_komissiya_tutmur_lakin_b_zi_banklar_z_t_r_find_n_komissiya_tuta_bil_r">Leobank bu köçürmə üçün komissiya tutmur,lakin bəzi banklar öz tərəfindən komissiya tuta bilər</string>
    <string name="balans_art_r">Balansı artır</string>
    <string name="kart_balans_n_n_ba_qa_bankdan_art_r_lmas">Kart balansının başqa bankdan artırılması</string>
    <string name="kopyala">Kopyala</string>
    <string name="leobank_kart_n_z_n_n_mr_sini_kopyalay_n">Leobank kartınızın nömrəsini kopyalayın</string>
    <string name="kart_n_n_mr_sini_dig_r_bank_n_t_tbiqind_daxil_edin">Kartın nömrəsini digər bankın tətbiqində daxil edin</string>
    <string name="k_rm_m_bl_ini_g_st_rin_v_m_liyyat_t_sdiql_yin">Köçürmə məbləğini göstərin və əməliyyatı təsdiqləyin</string>
    <string name="balans_n_dig_r_kartdan_art_r_lmas">Balansın digər kartdan artırılması</string>
    <string name="kart_n_mr_si">Kart nömrəsi</string>
    <string name="komissiyas_zz">Komissiyasız</string>
    <string name="qeydiyyat">Qeydiyyat</string>
    <string name="ad_soyad">Ad Soyad</string>
    <string name="ifr">Şifrə</string>
    <string name="ir_li">Irəli</string>
    <string name="d_st_kk">Dəstək</string>
    <string name="yeni_pin_kodunuzu_yarad_n">Yeni PIN kodunuzu yaradın</string>
    <string name="pin_kodunuzu_t_sdiq_edin">PIN kodunuzu təsdiq edin</string>
    <string name="pin_kod">PIN kod</string>
    <string name="pin_kodu_unutmusunuz">PIN kodu unutmusunuz?</string>
    <string name="profil_v_ayarlarr">Profil və ayarlar</string>
    <string name="d_z_li_et">Düzəliş et</string>
    <string name="siz_nec_m_raci_t_ed_k">Sizə necə müraciət edək?</string>
    <string name="telefon">Telefon</string>
    <string name="e_po_t">E-poçt</string>
    <string name="biometrik_m_lumatlarla_giri">Biometrik məlumatlarla giriş</string>
    <string name="dig_r_istifad_il_rin_laq_l_r_kitab_as_nda_g_st_r">Digər istifadəçilərin əlaqələr kitabçasında göstər</string>
    <string name="t_tniqin_rejimi">Tətbiqin rejimi</string>
    <string name="defolt">Defolt</string>
    <string name="x">Çıxış</string>
    <string name="sms_l_g_l_n_kodu_daxil_edin">SMS-lə gələn kodu daxil edin</string>
    <string name="sms_g_lmir">SMS gəlmir?</string>
    <string name="z_ng_sifari_etm_k">Zəng sifariş etmək</string>
    <string name="tarix">Tarix</string>
    <string name="yeni_karta_k_rm">Yeni karta köçürmə</string>
    <string name="al_c_n_n_kart_n_mr_si">Alıcının kart nömrəsi</string>
    <string name="g_nd_r">Göndər</string>
    <string name="balans_0_0">Balans 0.0</string>
    <string name="mobil_balans_n_art_r_lmas">Mobil balansın artırılması</string>
    <string name="kommunal_v_internet">Kommunal və internet</string>
    <string name="mobil_balans_art_r">Mobil balansı artır</string>
    <string name="ba_qa_kartdan_google_pay">Başqa kartdan (Google Pay)</string>
    <string name="n_s_r_tli_se_im">Ən sürətli seçim</string>
    <string name="dig_r_bankdan_k_rm">Digər bankdan köçürmə</string>
    <string name="ba_qa_kartdan">Başqa kartdan</string>
    <string name="swift_v_ya_lk_daxili">SWIFT və ya ölkədaxili</string>
    <string name="hesab_rekvizitl_ri_il">Hesab rekvizitləri ilə</string>
    <string name="telefon_n_mr_si">Telefon nömrəsi</string>
    <string name="do_um_tarixi">Doğum tarixi</string>
    <string name="email">Email</string>
    <string name="fin">Fin</string>
    <string name="biometrik_ikonu">biometrik_ikonu</string>
    <string name="email_ikonu">email_ikonu</string>
    <string name="telefon_ikonu">telefon_ikonu</string>
    <string name="istifadeci">istifadeci</string>
    <string name="ad_ikonu">ad_ikonu</string>
    <string name="istifadeci_sekli">istifadeci_sekli</string>
    <string name="geri">geri</string>
    <string name="biometrik_acik_bagla">biometrik_acik_bagla</string>
    <string name="mexfilik_ikonu">mexfilik_ikonu</string>
    <string name="istifadeci_ikonu">istifadeci_ikonu</string>
    <string name="mexfilik_acik_bagla">mexfilik_acik_bagla</string>
    <string name="dil_ikonu">dil_ikonu</string>
    <string name="tema_ikonu">tema_ikonu</string>
    <string name="cixis_ikonu">cixis_ikonu</string>
    <string name="miqdar_daxil_edin">Miqdarı daxil edin (₼)</string>
    <string name="d_ni_l_r">Ödənişlər</string>
    <string name="kart_n_mr_sini_daxil_edin">Kart nömrəsini daxil edin</string>
    <string name="na_d_pulla">Nağd pulla</string>
    <string name="silk_l_v_d">Silkələ və ödə</string>
    <string name="yax_nl_qda_k_rm">Yaxınlıqda köçürmə</string>
    <string name="h_kum_t_d_ni_l_ri">Hökumət ödənişləri</string>
    <string name="dyp_c_rim_l_ri">DYP cərimələri</string>
    <string name="parking_n_d_ni">Parking üçün ödəniş</string>
    <string name="anipay_k_rm_si">AniPay köçürməsi</string>
    <string name="kredit_d_ni_i">Kredit ödənişi</string>
    <string name="kontakt_home_r_ad_soliton">Kontakt Home, İrşad, Soliton...</string>
    <string name="m_t_madi_d_ni">Mütəmadi ödəniş</string>
    <string name="yeni">Yeni</string>
    <string name="lk_q_bzini_skan_edin">İlk qəbzini skan edin</string>
    <string name="x_zin_l_r">Xəzinələr</string>
    <string name="neyese">neyese</string>
    <string name="h_d_f">Hədəf</string>
    <string name="depozitlar_v_x_zin_l_r">Depozitlar və Xəzinələr</string>
    <string name="st_diyiniz_m_bl_x_zin_a_a_ist_diyiniz_zaman_balans_n_art_ra_v_ba_laya_bil_rsiniz">💰 İstədiyiniz məbləğə Xəzinə aça, istədiyiniz zaman balansını artıra və bağlaya bilərsiniz</string>
    <string name="depozit_m_yy_n_m_dd_t_balansart_rma_imkan_olmadan_a_l_r_lakin_faiz_d_r_c_si_y_ks_kdir">🌻 Depozit müəyyən müddətə, balansartırma imkanı olmadan açılır; lakin faiz dərəcəsi yüksəkdir</string>
    <string name="depozitl_siz_illik_12_q_d_r_qazanc_ld_ed_c_ksiniz_x_zin_il_is_leo_black_kart_n_z_varsa_6_v_ya_leo_prime_kart_n_z_varsa_7_qazanc_ld_ed_c_ksiniz">🤲 Depozitlə siz illik 12%-ə qədər qazanc əldə edəcəksiniz! Xəzinə ilə isə Leo Black kartınız varsa, 6% və ya Leo Prime kartınız varsa, 7% qazanc əldə edəcəksiniz</string>
    <string name="pulunuz_az_rbaycan_respublikas_n_n_man_tl_rin_s_ortalanmas_fondunun_etibarl_m_hafiz_si_alt_ndad_r">🛡️ Pulunuz Azərbaycan Respublikasının Əmanətlərin Sığortalanması Fondunun etibarlı mühafizəsi altındadır</string>
</resources>