<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bottom_sheet">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dil"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="8dp"/>
    <RadioGroup
        android:id="@+id/radioGroupLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioAzerbaijan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/az_rbaycan" />

        <RadioButton
            android:id="@+id/radioRussian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rus" />

    </RadioGroup>

</LinearLayout>