<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentCollect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:background="#E2C7A1">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_collect"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <include layout="@layout/coordinator_collect"/>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/content_scrolling_back"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scroll_recyc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="20dp">





    <TextView
            android:id="@+id/txtTreasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_zin_l_r"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imgTreasures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ictreasure"
            app:layout_constraintStart_toStartOf="@+id/txtTreasure"
            app:layout_constraintTop_toBottomOf="@+id/txtTreasure"
            app:layout_constraintBottom_toTopOf="@id/viewLine"
            />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/neyese"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.00"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent" />


        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_margin="15dp"
            android:background="#A6D81B60"
            app:layout_constraintBottom_toBottomOf="@+id/imgTreasures"
            app:layout_constraintStart_toEndOf="@+id/imgTreasures"
            app:layout_constraintTop_toTopOf="@id/imgTreasures" />


        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h_d_f"
            android:textColor="@color/colorUnchecked"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/view" />


        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1000"
            android:textColor="@color/colorUnchecked"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <View
            android:id="@+id/viewLine"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="24sp"
            android:background="@color/colorUnchecked"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewLine"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="-45dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:text="@string/depozitlar_v_x_zin_l_r"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/st_diyiniz_m_bl_x_zin_a_a_ist_diyiniz_zaman_balans_n_art_ra_v_ba_laya_bil_rsiniz"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/depozit_m_yy_n_m_dd_t_balansart_rma_imkan_olmadan_a_l_r_lakin_faiz_d_r_c_si_y_ks_kdir"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/depozitl_siz_illik_12_q_d_r_qazanc_ld_ed_c_ksiniz_x_zin_il_is_leo_black_kart_n_z_varsa_6_v_ya_leo_prime_kart_n_z_varsa_7_qazanc_ld_ed_c_ksiniz"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pulunuz_az_rbaycan_respublikas_n_n_man_tl_rin_s_ortalanmas_fondunun_etibarl_m_hafiz_si_alt_ndad_r"
                android:textSize="16sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
