<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/otherBankBg">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/kart_balans_n_n_ba_qa_bankdan_art_r_lmas"
        android:textColor="@color/textColor"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:background="@drawable/bg_card_gradient">



            <TextView
                android:id="@+id/card_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="4098 5844 9114 6203"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <!-- Copy icon (istəsən əlavə edərsən) -->
            <ImageView
                android:id="@+id/img_copy"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_copy24"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/kopyala"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:tint="@color/textColor"
                android:src="@drawable/icnotepad" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leobank_kart_n_z_n_n_mr_sini_kopyalay_n"
                android:layout_marginStart="12dp"
                android:textSize="16sp"
                android:textColor="@color/textColor" />
        </LinearLayout>
=
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/iccheckall35" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kart_n_n_mr_sini_dig_r_bank_n_t_tbiqind_daxil_edin"
                android:layout_marginStart="12dp"
                android:textSize="16sp"
                android:textColor="@color/textColor" />
        </LinearLayout>
=
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/icons8_money_30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/k_rm_m_bl_ini_g_st_rin_v_m_liyyat_t_sdiql_yin"
                android:layout_marginStart="12dp"
                android:textSize="16sp"
                android:textColor="@color/textColor" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
